// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./antdv-demo/docs/color-picker/demo/alpha.md correctly 1`] = `<a-color-picker alpha="true"></a-color-picker>`;

exports[`renders ./antdv-demo/docs/color-picker/demo/basic.md correctly 1`] = `
<div class="ant-row">
  <div class="ant-col ant-col-12">
    有默认值
    <a-colorpicker></a-colorpicker>
  </div>
  <div class="ant-col ant-col-12">
    无默认值
    <a-colorpicker></a-colorpicker>
  </div>
</div>
`;

exports[`renders ./antdv-demo/docs/color-picker/demo/colors.md correctly 1`] = `<a-color-picker config="[object Object]"></a-color-picker>`;

exports[`renders ./antdv-demo/docs/color-picker/demo/hue.md correctly 1`] = `<a-color-picker></a-color-picker>`;

exports[`renders ./antdv-demo/docs/color-picker/demo/size.md correctly 1`] = `
<div>
  <div class="ant-row">
    <div class="ant-col ant-col-8">
      <a-colorpicker size="large"></a-colorpicker>
    </div>
    <div class="ant-col ant-col-8">
      <a-colorpicker></a-colorpicker>
    </div>
    <div class="ant-col ant-col-8">
      <a-colorpicker size="small"></a-colorpicker>
    </div>
  </div>
</div>
`;
